<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<resources>
  <string name="app_name">LNReader eXtended</string>
  <string name="s_pen_remote_action_set_label">LNReader eXtended</string>
  <string name="s_pen_remote_next_page">Next page</string>
  <string name="s_pen_remote_previous_page">Previous page</string>
  <string name="s_pen_remote_next_chapter">Next chapter</string>
  <string name="s_pen_remote_previous_chapter">Previous chapter</string>
</resources>
